fixed overlaping on_demand text

--- a/www/default.css
+++ b/www/default.css
@@ -42,6 +42,7 @@ div.show_always, div.show_on_demand {
     padding: 0px;
     border: 0px;
     display: flex;
+    width: 100%;
 }
 
 div.show_on_demand {
@@ -112,7 +113,8 @@ div.progress_bar {
     left: 0px;
     top: 50%;
     transform: translate(0%, -50%);
-    background-color: rgb(0, 93, 168);;
+    background-color: rgb(0, 93, 168);
+    ;
     height: 100%;
     z-index: 1;
 }
@@ -129,30 +131,29 @@ div.progress_bar_WARN {
     div.main {
         max-width: 90em;
     }
-
     div.header_box, div.plugin {
         flex-flow: row;
     }
-
+    div.show_always {
+        width: 50%;
+    }
     div.show_on_demand {
-        background-color: #2c2c2c;;
+        background-color: #2c2c2c;
+        ;
         display: flex;
         flex-flow: row;
         flex-grow: 1;
     }
-
     div.plugin_percentage {
         width: 15em;
         justify-content: flex-start;
         position: relative;
     }
-
     div.plugin_text {
         flex-basis: 50%;
         flex-shrink: 1;
         flex-grow: 2;
     }
-
     div.plugin_last {
         justify-content: flex-start;
         flex-basis: 15em;
